--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
     <head>
         <title>PetLife</title>
         <meta name="description" content="Garanta uma vida longa e cheia de alegria para o seu melhor amigo">
+        <link rel="stylesheet" href="index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <header>
             <a href="index.html">
-                <img src="img/logo.svg" alt="PetLife">
+                <img src="img/logo-white.svg" alt="PetLife">
             </a>
 
             <nav>
@@ -24,7 +28,7 @@
 
                 <div>
                     <h1>Garanta uma vida longa e cheia de alegria para o seu melhor amigo</h1>
-                    <p>A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais dedicados e serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo o bem-estar, a saúde e a felicidade dos seus animais de estimação.</p>
+                    <p class="paragrafo">A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais dedicados e serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo o bem-estar, a saúde e a felicidade dos seus animais de estimação.</p>
                     <a href="https://wa.me/5542987654321" target="_blank">Marque uma consulta</a>
                     <a href="#clinica">Conheça nossa clínica</a>
                 </div>
@@ -34,7 +38,7 @@
                 <div>
                 <h2>Cuidado Veterinário de Qualidade</h2>
 
-                <p>Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados veterinários. Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos serviços de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e desfrute da atenção personalizada e do carinho que seu pet merece.</p>
+                <p class="paragrafo">Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados veterinários. Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos serviços de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e desfrute da atenção personalizada e do carinho que seu pet merece.</p>
                 
                 <ul>
                     <li>Consultas de rotina e exames abrangentes</li>
@@ -53,7 +57,7 @@
 
             <section id="farmacia">
                 <h2>Venha conferir o nosso petshop e farmácia</h2>
-                <p>Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos deliciosos até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará uma variedade de medicamentos, produtos de cuidados e suplementos recomendados pelos nossos veterinários, garantindo que o bem-estar e a saúde do seu amado pet estejam sempre em boas mãos. Tudo o que você precisa para cuidar e mimar o seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que nos tornou referência na área veterinária.</p>
+                <p class="paragrafo">Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos deliciosos até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará uma variedade de medicamentos, produtos de cuidados e suplementos recomendados pelos nossos veterinários, garantindo que o bem-estar e a saúde do seu amado pet estejam sempre em boas mãos. Tudo o que você precisa para cuidar e mimar o seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que nos tornou referência na área veterinária.</p>
 
                 <img src="img/shop-img.svg" alt="" width="645" height="430" loading="lazy">
             </section>
@@ -67,25 +71,25 @@
                     <div>
                         <h3>Quais são os serviços oferecidos pela clínica da PetLife?</h3>
                         <img src="img/arrow-down.svg">
-                        <p>A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação, cirurgias, tratamento de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de pulgas, carrapatos e vermes, entre outros. Nosso objetivo é fornecer cuidados abrangentes e personalizados para garantir a saúde e o bem-estar do seu pet.</p>
+                        <p class="paragrafo">A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação, cirurgias, tratamento de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de pulgas, carrapatos e vermes, entre outros. Nosso objetivo é fornecer cuidados abrangentes e personalizados para garantir a saúde e o bem-estar do seu pet.</p>
                     </div>
 
                     <div>
                         <h3>Quais espécies de animais a clínica veterinária atende?</h3>
                         <img src="img/arrow-down.svg">
-                        <p>A clinica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos, pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de diferentes tipos de animais, oferecendoum atendimento especializado e dedicado a cada um deles.</p>
+                        <p class="paragrafo">A clinica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos, pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de diferentes tipos de animais, oferecendoum atendimento especializado e dedicado a cada um deles.</p>
                     </div>
 
                     <div>
                         <h3>A clinica veterinária da PetLife possui serviços de emergência?</h3>
                         <img src="img/arrow-down.svg">
-                        <p>Sim, a clínica veterinária PetLife oferece serviços de emergência 24 horas. Se o seu animal de estimação precisar de atendimento veterinério imediato fora do horário de expediente, nossa equipe está pronta para ajudar, fornecendo cuidados urgentes e tratamento adequado para garantir o bem-estar do seu pet.</p>
+                        <p class="paragrafo">Sim, a clínica veterinária PetLife oferece serviços de emergência 24 horas. Se o seu animal de estimação precisar de atendimento veterinério imediato fora do horário de expediente, nossa equipe está pronta para ajudar, fornecendo cuidados urgentes e tratamento adequado para garantir o bem-estar do seu pet.</p>
                     </div>
 
                     <div>
                         <h3>A clinica oferece serviços de banho e tosa?</h3>
                         <img src="img/arrow-down.svg">
-                        <p>Sim, a clínica veterinária PetLife oferece serviços profissionais de banho e tosa. Nossa equipe de profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e técnicas seguras. O banho e tosa ajudam a manter a higiene, a saúde da pele e pelagem do seu pet,além de proporcionar uma experiência relaxante e agradável para eles.</p>
+                        <p class="paragrafo">Sim, a clínica veterinária PetLife oferece serviços profissionais de banho e tosa. Nossa equipe de profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e técnicas seguras. O banho e tosa ajudam a manter a higiene, a saúde da pele e pelagem do seu pet,além de proporcionar uma experiência relaxante e agradável para eles.</p>
                     </div>
 
                 </div>
