--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
                 <div>
                     <h1>Garanta uma vida longa e cheia de alegria para o seu melhor amigo</h1>
                     <p class="paragrafo">A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais dedicados e serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo o bem-estar, a saúde e a felicidade dos seus animais de estimação.</p>
-                    <a href="https://wa.me/5542987654321" target="_blank">Marque uma consulta</a>
-                    <a href="#clinica">Conheça nossa clínica</a>
+                    <a class="botao" href="https://wa.me/5542987654321" target="_blank">Marque uma consulta</a>
+                    <a class="botao_transparente" href="#clinica">Conheça nossa clínica</a>
                 </div>
+
+                <img class="absolute" src="img/shape.svg" alt="">
             </section>
 
             <section id="clinica">
