--- a/index.html
+++ b/index.html
@@ -70,25 +70,25 @@
                 <div>
                     <h2>Ficou com alguma dúvida?</h2>
 
-                    <div>
+                    <div class="duvida">
                         <h3>Quais são os serviços oferecidos pela clínica da PetLife?</h3>
                         <img src="img/arrow-down.svg">
                         <p class="paragrafo">A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação, cirurgias, tratamento de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de pulgas, carrapatos e vermes, entre outros. Nosso objetivo é fornecer cuidados abrangentes e personalizados para garantir a saúde e o bem-estar do seu pet.</p>
                     </div>
 
-                    <div>
+                    <div class="duvida">
                         <h3>Quais espécies de animais a clínica veterinária atende?</h3>
                         <img src="img/arrow-down.svg">
                         <p class="paragrafo">A clinica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos, pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de diferentes tipos de animais, oferecendoum atendimento especializado e dedicado a cada um deles.</p>
                     </div>
 
-                    <div>
+                    <div class="duvida">
                         <h3>A clinica veterinária da PetLife possui serviços de emergência?</h3>
                         <img src="img/arrow-down.svg">
                         <p class="paragrafo">Sim, a clínica veterinária PetLife oferece serviços de emergência 24 horas. Se o seu animal de estimação precisar de atendimento veterinério imediato fora do horário de expediente, nossa equipe está pronta para ajudar, fornecendo cuidados urgentes e tratamento adequado para garantir o bem-estar do seu pet.</p>
                     </div>
 
-                    <div>
+                    <div class="duvida">
                         <h3>A clinica oferece serviços de banho e tosa?</h3>
                         <img src="img/arrow-down.svg">
                         <p class="paragrafo">Sim, a clínica veterinária PetLife oferece serviços profissionais de banho e tosa. Nossa equipe de profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e técnicas seguras. O banho e tosa ajudam a manter a higiene, a saúde da pele e pelagem do seu pet,além de proporcionar uma experiência relaxante e agradável para eles.</p>
@@ -104,7 +104,7 @@
                 <p>Cuidando com amor, vivendo com alegria: PetLife, onde a vida dos pets é mais feliz!</p>
             </div>
             <div>
-                <strong>Links rápidos</strong>
+                <strong class="titulo">Links rápidos</strong>
                 <nav>
                     <a href="#inicio">Início</a>
                     <a href="#clinica">Clínica</a>
@@ -113,13 +113,13 @@
                 </nav>
             </div>
             <div>
-                <strong>Encontre-nos</strong>
+                <strong class="titulo">Encontre-nos</strong>
                 <p>Whatsapp: <a href="https://wa.me/5542987654321" target="_blank">(42) 98765-4321</p></a>
                 <p>Email: <a href="mailto:contato@petlife.com">contato@petlife.com</p></a>
                 <p>Endereço: Av. 15 de Setembro, n° 42, Centro</p>
             </div>
         </footer>
-        <div>
+        <div id="copy">
             Desenvolvido por <a href="https://github.com/gabrielkkskx" target="_blank">@gabriel_kkskx 🤘</a>
         </div>
     </body>
