--- a/index.html
+++ b/index.html
@@ -122,5 +122,6 @@
         <div id="copy">
             Desenvolvido por <a href="https://github.com/gabrielkkskx" target="_blank">@gabriel_kkskx 🤘</a>
         </div>
+        <script src="index.js"></script>
     </body>
 </html>
