Alterações index.html

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
         </footer>
         <div id="copy">
-            Desenvolvido por <a href="https://github.com/gabrielkkskx" target="_blank">@gabriel_kkskx 🤘</a>
+            Desenvolvido por <a href="https://github.com/gabrielkkskx" target="_blank">@gabriel_kkskx 🤙</a>
         </div>
         <script src="index.js"></script>
     </body>
