--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title>PetLife</title>
+
+        <link rel="website icon" type="png" href="img/Favicon.png">
+
         <meta name="description" content="Garanta uma vida longa e cheia de alegria para o seu melhor amigo">
         <link rel="stylesheet" href="index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
