--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>PetLife</title>
 
-        <link rel="website icon" type="png" href="img/veterinario (1).png">
+        <link rel="website icon" type="svg" href="img/veterinario-1.svg">
 
         <meta name="description" content="Garanta uma vida longa e cheia de alegria para o seu melhor amigo">
         <link rel="stylesheet" href="index.css">
