--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>PetLife</title>
-        <link rel="website icon" type="svg" href="img/veterinario.svg">
+        <link rel="icon" href="img/veterinario.svg" type="image/svg">
         <meta name="description" content="Garanta uma vida longa e cheia de alegria para o seu melhor amigo">
         <link rel="stylesheet" href="index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
